--- a/www/css/index.css
+++ b/www/css/index.css
@@ -6,89 +6,6 @@
  Copyright 2011 SHarper. All rights reserved.
  */
 
- /***** HEADER CSS NOT REQUIRED FOR DEMO *****/
-
-#safe-ribbon a{
-  z-index: 2000;
-  background:#E98300;
-  color:#fff;
-  text-decoration:none;
-  font-family:arial, sans-serif;
-  text-align:center;
-  font-weight:bold;
-  padding:5px 40px;
-  font-size:1rem;
-  line-height:2rem;
-  position:relative;
-  transition:0.5s;
-}
-
-#safe-ribbon a:hover{
-  background:#DA7B00;
-  color:#fff;
-}
-
-
-#safe-ribbon a::before,#safe-ribbon a::after{
-  content:"";
-  width:100%;
-  display:block;
-  position:absolute;
-  top:1px;
-  left:0;
-  height:1px;
-  background:#ffffff;
-}
-
-#safe-ribbon a::after{
-  bottom:1px;
-  top:auto;
-}
-
-@media screen and (min-width:767px){
-  #safe-ribbon{
-    position:absolute;
-    display:block;
-    top:0;
-    right:0;
-    width:200px;
-    overflow:hidden;
-    height:200px;
-  }
-  #safe-ribbon a{
-    width:200px;
-    position:absolute;
-    top:60px;
-    right:-60px;
-    transform:rotate(45deg);
-    -webkit-transform:rotate(45deg);
-    box-shadow:0px 1px 4px rgba(0,0,0,0.8);
-  }
-}
-
-
-body {
-  padding-top: 60px;
-  font-family: verdana;
-}
-
-@media (max-width: 980px) {
-  body{
-    padding-top: 0;
-  }
-}
-
-.brand{
-  color: #ffffff !important;
-  font-weight: 400 !important;
-  text-shadow: none !important;
-}
-
-
-.navbar-inner {
-  background-color: #7AB800;
-  background-image: none;
-}
 
 /**** End of Header CSS ****/
 
@@ -126,12 +43,12 @@ h1 {
 
 #mapwrapper {
 	width: 100%;
-	height: 70%;
+	height: 100%;
 	z-index: 1;
 }
 
 #map_canvas {
-	height: 70%;
+	height: 100%;
 	bottom: 1px;
 	left: 1px;
 	margin: 0;
@@ -139,28 +56,14 @@ h1 {
 	padding: 0;
 	position: absolute;
 	right: 1px;
-	top: 40px;
-}
-
-#mapBingMaps, #mapArcGISServer, #mapOpenLayers{
-	width: 99.9%;
-	height: 70%;
-	bottom: 1px;
-	left: 1px;
-	margin: 0;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	right: 1px;
-	top: 1px;
 }
 
 /*
- The request panel where you set 
+ The request panel where you set
  the parameters for the translation
 */
 #request_form {
-	top: 45px;
+	top: 5px;
 	margin: 5px;
 	text-align: left;
 	position: absolute;
@@ -169,7 +72,7 @@ h1 {
 	-moz-border-radius: 8px;
 	border-radius: 8px;
 	background-color: white;
-	min-height: 402px;
+  max-height:100%;
 	box-shadow: 10px 10px 5px #888;
 }
 
@@ -193,8 +96,8 @@ h1 {
 	padding-left: 10px;
 	padding-top: 10px;
 	font-weight: bold;
-  border-bottom: 1px solid rgb(226, 226, 226);
 }
+
 #fmeForm element {
 	color: #202020;
 	font-weight: normal;
@@ -251,16 +154,8 @@ h1 {
 	color: blue;
 }
 
-.loading-image{
-  text-align: center;
-}
-
-.loading-image img{
-  padding-left: 131px;
-}
-
 #results-panel{
-	margin: 0px 10px 5px 5px;	
+	margin: 0px 10px 5px 5px;
 	-moz-border-radius: 8px;
 	border-radius: 8px;
 	float: right;
@@ -296,14 +191,14 @@ h1 {
 
 
 #query-panel {
-	height: 30%;	
+	height: 30%;
 	min-height: 200px;
 	-moz-border-radius: 8px;
 	border-radius: 8px;
 	text-align: left;
 	word-wrap: break-word;
 	margin-right: 420px;
-	margin-left: 5px;	
+	margin-left: 5px;
 	color: #404040;
 	box-shadow: 5px 5px 5px #888;
     border-left:1px solid #E0E0E0;
